# Universe

./: .gitignore  A.cpp  A.h  Chernovik.sln  Cinema.cpp  Cinema.h  Film.cpp  Film.h  L_r_3_Stoma_PI-20g.docx  Metodichka_po_normokontrolyu_Novaya.doc  OPI_lr3.docx  Repertoire.cpp  Repertoire.h  funcs.cpp  funcs.h  laborotornaya_rabota_3.odt  main.cpp  test.cpp  zashhita_lab-4-.docx  ~$Б 3 ФИЗИКА.docx
c++/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication10.cpp  ConsoleApplication10.sln  ConsoleApplication11.cpp  ConsoleApplication11.sln  ConsoleApplication12.cpp  ConsoleApplication12.sln  ConsoleApplication13.cpp  ConsoleApplication13.sln  ConsoleApplication14.sln  ConsoleApplication2.cpp  ConsoleApplication2.sln  ConsoleApplication3.cpp  ConsoleApplication3.sln  ConsoleApplication4.cpp  ConsoleApplication4.sln  ConsoleApplication5.cpp  ConsoleApplication5.sln  ConsoleApplication6.cpp  ConsoleApplication6.sln  ConsoleApplication7.cpp  ConsoleApplication7.sln  ConsoleApplication8.cpp  ConsoleApplication8.sln  ConsoleApplication9.cpp  ConsoleApplication9.sln  KP_001.cpp  KP_001.sln  OOP2.cpp  OOP2.sln  Project1.sln  class binary tree (2).cpp  class binary tree (2).sln  class binary tree — копия (2).cpp  class binary tree.cpp  class binary tree2.cpp  class binary tree3.cpp
Английский/: 02 Дорожка 2.wma  03 Дорожка 3.wma  04 Дорожка 4.wma  05 Дорожка 5.wma
КП/: ЕВСЕЕВ Курсовая работа — копия.docx  ЕВСЕЕВ Курсовая работа — оригинал.docx
ЛинАл/: Контрольная работа №2.docx
ООП/Course Project/end copy/: CMakeLists.txt  Film.cpp  funcs.cpp  main.cpp
(+212 files in other folders)
